[tool.poetry]
name = "parser"
version = "0.1.0"
description = "Simple parser for parsing additional customer data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
requests = "^2.32.3"
selenium = "^4.29.0"
loguru = "^0.7.3"
bs4 = "^0.0.2"
streamlit = "^1.45.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
